--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/powerup
     username: root
-    password: 1088298314
+    password: ${Password}
+    spring.security.user.name: admin
+    spring.security.user.password: admin
 
   jpa:
     hibernate:
@@ -13,3 +15,5 @@ spring:
     show-sql: true
 appDescription: "Pragma Powerup"
 appVersion: "1.0.0"
+
+
