--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/powerup
     username: root
-    password: ${PasswordUser}
+    #password: ${PasswordUser}
+    password: 1088298314
     spring.security.user.name: admin
     spring.security.user.password: admin
 
